<resources>
    <string name="app_name">Bottom_Nav_Example</string>
    <string name="home_nav_title">Home</string>
    <string name="search_nav_title">Search</string>
    <string name="utilities_nav_title">Utilities</string>
    <string name="contact_us_nav_title">Contact Us</string>
    <string name="my_profile_nav_title">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragmentb">FragmentB</string>
    <string name="fragment_c">Fragment C</string>
    <string name="fragment_d">Fragment D</string>
    <string name="fragment_e">Fragment E</string>
</resources>